[package]
name = "helios-core"
version.workspace = true
edition = "2021"

[dependencies]
# self crates
helios-common = { path = "../common" }
helios-verifiable-api-client = { path = "../verifiable-api/client" }

# execution
alloy = { workspace = true, features = ["rand"] }
alloy-trie.workspace = true
revm.workspace = true

# async/futures
futures.workspace = true
async-trait.workspace = true
tokio.workspace = true

# io
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

# cache
schnellru = "0.2"

# misc
eyre.workspace = true
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonrpsee = { version = "0.24.10", features = ["full"] }
openssl.workspace = true
tower = "0.4"
http = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.33"
wasmtimer.workspace = true
getrandom = { version = "0.3.1", features = ["wasm_js"] }

[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.12.2" }

[dev-dependencies]
helios-test-utils = { path = "../tests/test-utils" }
helios-ethereum = { path = "../ethereum" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
